# HAinimeManager

./: .gitignore  HANDOFF.md  README.md  lib.rs  ui-prototype.html
src/: index.html  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  database.rs  duplicates.rs  import.rs  lib.rs  library.rs  main.rs  media.rs  metadata.rs  models.rs  runtime.rs  scrape.rs  sync_backup.rs
src/js/: archive.js  detail.js  events.js  filters.js  navigation.js  player.js  settings.js  state.js
tools/: capture-release-window.ps1
